<resources>
    <string name="app_name">War Of Viruses</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server_cgi">https://ldvsoft.net/cgi/war-of-viruses</string>

    <string name="give_up">Give Up</string>
    <string name="skip_turn">Skip Turn</string>
    <string name="first_turn"><![CDATA[<<]]></string>
    <string name="prev_turn"><![CDATA[<]]></string>
    <string name="next_turn"><![CDATA[>]]></string>
    <string name="last_turn"><![CDATA[>>]]></string>
    <string name="GAME_LOST">Lost</string>
    <string name="GAME_WON">Won</string>
    <string name="GAME_LOCAL">Local game</string>
    <string name="GAME_DRAW">Draw</string>
    <string name="GAME_ZERO_WON">Zeroes won</string>
    <string name="GAME_CROSS_WON">Crosses won</string>
    <string name="GAME_OVER">Game over</string>
    <string name="GAME_MINITURNS_LEFT">%d moves left</string>
    <string name="GAME_CROSS_TURN">Crosses\' turn</string>
    <string name="GAME_ZERO_TURN">Zeroes\' turn</string>
    <string name="GAME_USER_TURN">Your turn</string>
    <string name="GAME_OPPONENT_TURN">Opponent\'s turn</string>
</resources>
